<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.programacion3.pixies.app.RegisterActivity"
    android:backgroundTint="#B1BCBE"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/logo_blanco"
        android:layout_gravity="center"
        android:src="@drawable/andys_blanco"
        android:layout_width="140dp"
        android:layout_height="160dp" />
    <LinearLayout
        android:padding="5dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_bordes_1"
        android:layout_gravity="center"
        android:backgroundTint="#c2bebe"
        >
        <EditText
            android:id="@+id/nombrecompleto"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_NOMBRE"
            />
        <EditText
            android:id="@+id/numerotelefono"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_TELEFONO"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/direccion"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_DIRECCION"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_EMAIL"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/contrasena"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_CONTRASEÑA"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="15dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:background="@drawable/layout_boton_redondeado"
        android:backgroundTint="#EE1D1D"
        android:onClick="clickButton"
        android:id="@+id/registrarse2"/>

</LinearLayout>
